--- a/assets/css/style.css/style.css
+++ b/assets/css/style.css/style.css
@@ -103,6 +103,7 @@ nav {
     position: relative;
     right: 30px;
     font-family: Georgia, Times, Times New Roman, serif;
+    margin-right: 20px
 }
 
 aside {
